# inkling

./: .env.sample  .gitignore  INSTALL_NODEJS.md  QUICKSTART.md  README.md  SETUP.md  config.yaml  diagnose_npm.ps1  main.py  pyproject.toml  run_api.py  start_dev.bat  start_dev.sh
data/: inkling.db
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: Header.css  Header.js
frontend/src/pages/: CreateTopic.css  CreateTopic.js  Home.css  Home.js  Quiz.css  Quiz.js  QuizHistory.css  QuizHistory.js
frontend/src/services/: api.js
src/inkling/: __init__.py  ai_service.py  api.py  cli.py  config.py  knowledge_graph.py  models.py  quiz_service.py  storage.py  topic_service.py
tests/: __init__.py  test_ai_service.py  test_knowledge_graph.py  test_neo4j_knowledge_graph.py
utils/: __init__.py  migrate_answers_table.py  visualize_knowledge_graph.py
