[project]
name = "inkling"
version = "0.1.0"
description = "A learning application with knowledge graphs and AI-generated quizzes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5.0.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "sqlalchemy>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]

